--- a/hw-kafka-client.cabal
+++ b/hw-kafka-client.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c01d07e897b9cf5d0f6237227a00230ec841fe4a3a22766142dc015f4f703ba1
+-- hash: 7b5e0c004b38a5cc5a24e8d3c456a457007c9658cccd5f14525a07fc2d2c74b9
 
 name:           hw-kafka-client
 version:        2.5.0
@@ -69,6 +69,8 @@ library
       Kafka.Producer.Types
       Kafka.Types
   other-modules:
+      Kafka.Admin
+      Kafka.Admin.AdminProperties
       Kafka.Callbacks
       Kafka.Consumer.Callbacks
       Kafka.Consumer.Convert
